<resources>
    <string name="app_name">ORWMA Projekt</string>
    <string name="welcome_text">Welcome to Tweetzone!</string>
    <string name="moto_text">See what\'s happening in the world right now!</string>
    <string name="login_button">LOG IN</string>
    <string name="todo">TODO</string>
    <string name="email">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_retype">Confirm password</string>
    <string name="button">Button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_to_tweetzone_sign_up_now">New to Tweetzone? Sign up now!</string>
    <string name="todo1">TODO</string>
    <string name="delete" />
    <string name="name">NAME</string>
    <string name="name1">name</string>
    <string name="this_is_a_tweet">THIS IS A TWEET</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="date">date</string>
    <string name="todo4">TODO</string>
    <string name="post_tweet">Post Tweet</string>
    <string name="tweet">Tweet</string>
    <string name="todo5">TODO</string>
    <string name="what_s_happening">What\'s happening</string>
    <string name="home">Home</string>
    <string name="todo6">TODO</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="welcome_to_the_tweetzone">Welcome to the Tweetzone!</string>
    <string name="already_have_account_log_in">Already have account? Log in!</string>
    <string name="register">register</string>
    <string name="textview">TextView</string>
    <string name="image_url">Image URL</string>
    <string name="textview1">TextView</string>
    <string name="followers">Followers</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="following">Following</string>
    <string name="textview4">TextView</string>
    <string name="sign_out">Sign out</string>
    <string name="textview5">TextView</string>
    <string name="last_name1">Last name:</string>
    <string name="first_name1">First name:</string>
</resources>