<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="100dp"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:srcCompat="@drawable/egg"
            android:contentDescription="@string/todo1"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_baseline_delete_24"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/delete"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_tweet_text"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        app:tint="#565656"


        tools:ignore="ContentDescription,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/cardView"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/tv_name"
        android:maxLines="1"
        android:text="@string/name1"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tweet_text"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/cardView"
        android:text="@string/this_is_a_tweet"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo2"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/tv_tweet_text"
        app:srcCompat="@drawable/twitter_like"
        app:tint="#565656"
        tools:ignore="ContentDescription,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:backgroundTint="#565656"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/tv_tweet_text"
        app:srcCompat="@drawable/ic_twitter_comment"
        app:tint="#565656"
        android:contentDescription="@string/todo3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="15dp"
        android:layout_height="13dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_verified_24"
        tools:ignore="ContentDescription,ImageContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>