<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TweetFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/post_tweet"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/blue_button"
        android:text="@string/tweet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="RtlHardcoded" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/egg"
                android:contentDescription="@string/todo5"
                tools:ignore="ContentDescription" />


        </androidx.cardview.widget.CardView>

        <EditText
            android:inputType="textMultiLine"
            android:id="@+id/tweetText"
            android:layout_marginRight="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/cardView"
            android:background="@android:color/transparent"
            android:hint="@string/what_s_happening"
            android:autofillHints="" />

    </RelativeLayout>

</FrameLayout>